--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
     "mongodb": "^4.1.3",
+    "mongoose": "^6.3.3",
     "morgan": "~1.9.1",
     "node-fetch": "^3.0.0",
     "node-schedule": "^2.0.0",
