--- a/src/config/env-secret.template
+++ b/src/config/env-secret.template
@@ -15,4 +15,8 @@ export class SecretConfig {
         apiEndpoint: "https://openapi.tin.network/v1",
         apiKey: "abcdef" // Tin network API private key - pay per use
     }
+
+    public Git = {
+        essentialsRepoPath: "../Elastos.Essentials"
+    }
 }
