--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "typeRoots": [
-      "types",
+      "src/types",
       "node_modules/@types"
     ]
   }
