Rearm git fetch loop after an error

--- a/src/config/env-secret.template
+++ b/src/config/env-secret.template
@@ -16,7 +16,7 @@ export class SecretConfig {
         apiKey: "abcdef" // Tin network API private key - pay per use
     }
 
-    public Git = {
+    public static Git = {
         essentialsRepoPath: "../Elastos.Essentials"
     }
 }
