CU-3k50uhk New essentials API to sign chainge transactions

--- a/src/config/env-secret.template
+++ b/src/config/env-secret.template
@@ -19,4 +19,9 @@ export class SecretConfig {
     public static Git = {
         essentialsRepoPath: "../Elastos.Essentials"
     }
+
+    public static Chainge = {
+        appKey: "abcdef",
+        appSecret: "xyz"
+    }
 }
