get tokens price from cmc

--- a/src/config/env-secret.template
+++ b/src/config/env-secret.template
@@ -24,4 +24,6 @@ export class SecretConfig {
         appKey: "abcdef",
         appSecret: "xyz"
     }
+
+    public static CmcApiKey: string[] = []
 }
